boton de volver1

--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
 
   <!-- HOME -->
   <div id="home" class="screen">
+    <div></div>
+    <div></div>
     <button class="back" onclick="switchScreen('login')">◄</button>
     <div class="top-bar">
       <div>👟 Tienda</div>
