--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
   flex-direction: column; /* organiza pantallas dentro */
 }
     /* PANTALLAS */
-    .screen{display:none;position:absolute;width:100%;height:100%;top:0;left:0;overflow-y:auto;padding:20px;}
+    .screen {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto; /* scroll solo dentro del iphone */
+  padding: 20px;
+  box-sizing: border-box;
+}
+
     .active{display:block;}
 
     /* LOGIN */
