boton de volver final

--- a/index.html
+++ b/index.html
@@ -234,15 +234,13 @@
     <button class="btn btn-google" onclick="goHome()">
       <span class="google-content">
         <img src="images/google.png" alt="Google" class="google-logo" />
-        <span>Accede con Google</span>
+        <span></span>
         </span>
     </button>
   </div>
 
   <!-- HOME -->
   <div id="home" class="screen">
-    <div></div>
-    <div></div>
     <button class="back" onclick="switchScreen('login')">◄</button>
     <div class="top-bar">
       <div>👟 Tienda</div>
