--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ let shoes=[
   {id:2,cat:'casuales',name:'Urbano',price:95000,img:'images/urbano.jpg',colors:['Negro','Gris','Blanco','Azul']},
   {id:3,cat:'deportivos',name:'Runner Pro',price:120000,img:'images/runner.webp',colors:['Naranja','Rosado','Verde']},
   {id:4,cat:'formales',name:'Oxford Elite',price:135000,img:'images/oxxfor.webp',colors:['Marron','Negro']},
-  {id:5,cat:'formales',name:'Gala',price:200000,img:'images/estir.webp',colors:['Marron']},
+  {id:5,cat:'formales',name:'Gala',price:200000,img:'images/Vestir.webp',colors:['Marron']},
   {id:6,cat:'deportivos',name:'Winflo',price:118000,img:'images/winflo.webp',colors:['Naranja','Rosado','Verde']},
 
 ];
